# nginx-playground

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  api.py  app.py  docker-compose.yml  main.py  pyproject.toml  test_ollama.py
docker/: Dockerfile  Dockerfile.guardrail
helm/: .helmignore  Chart.yaml  README.MD  values.yaml
helm-from-kompose/: Chart.yaml
helm-from-kompose/templates/: chainlit-deployment.yaml  env-configmap.yaml  nginx-cm0-configmap.yaml  nginx-deployment.yaml  nginx-service.yaml  openai-api-key-secret.yaml  phoenix-deployment.yaml  phoenix-service.yaml  tavily-api-key-secret.yaml
helm/templates/: _helpers.tpl  app-deployment.yaml  phoenix-deployment.yaml  phoenix-service.yaml  phoenix_deployment.yaml  phoenix_service.yaml  search_agent_deployment.yaml  search_agent_service.yaml
nginx/: nginx.conf  nginx_v1.conf
notes/: README.MD
src/: on_chat_start.py  on_message.py
utils/: utils.py
