[project]
name = "nginx-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix-otel>=0.13.1",
    "chainlit>=2.8.3",
    "ipykernel>=7.0.1",
    "llama-index>=0.14.5",
    "llama-index-tools-tavily-research>=0.4.2",
    "openinference-instrumentation-llama-index>=4.3.7",
]
